tests/ui-tests/tests/cases/enum-guess-validation.stderr
error: Could not find a type named `Desseqt` in the schema
  --> tests/cases/enum-guess-validation.rs:10:20
   |
10 |     graphql_type = "Desseqt"
   |                    ^^^^^^^^^
